# fitness_coach

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  analytics_engine.py  api_server.py  coach.py  db.py  garmin_parser.py  garmin_sync.py  pyproject.toml  readiness_engine.py
backend/tests/: conftest.py  synthetic.py  test_api_behavior.py  test_coach.py  test_contract.py  test_db.py  test_readiness.py
backend/tests/goldens/: analytics_anomalies.json  analytics_baselines.json  analytics_correlations.json  analytics_full.json  analytics_lagged.json  analytics_trends.json  analytics_weekly.json  health_data.json  health_data_missing.json  health_data_single.json  summary.json  unknown_path.json
mobile_app/: pubspec.yaml
mobile_app/lib/: app.dart  config.dart  main.dart
mobile_app/lib/models/: health_data.dart  insight.dart  prediction.dart
mobile_app/lib/screens/: analytics_deep_dive_screen.dart  ask_coach_screen.dart  correlation_explorer_screen.dart  experiments_lab_screen.dart  insights_feed_screen.dart  main_navigation.dart  predictions_center_screen.dart  real_data_dashboard.dart
mobile_app/lib/services/: health_api_service.dart  insight_service.dart  mock_data_service.dart  real_data_service.dart
mobile_app/lib/theme/: app_theme.dart
mobile_app/lib/widgets/: health_score_card.dart  insight_card.dart  prediction_card.dart
mobile_app/test/: widget_test.dart
