[project]
name = "fitness-coach-backend"
version = "0.2.0"
description = "AI-powered fitness coach backend - Garmin data parser, analytics engine, and API server"
requires-python = ">=3.12"

dependencies = [
    "garminconnect>=0.2.22",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "apscheduler>=3.10",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
